# media_observer

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  json_util.hpp  media_observer.hpp  server.hpp
source/: main.cpp  media_observer.cpp  server.cpp
